--- a/lib/client/app/application/pages/authentication/partials/signup.html
+++ b/lib/client/app/application/pages/authentication/partials/signup.html
@@ -7,7 +7,7 @@
 	<section ng-cloak>
 
 		<!-- header -->
-		<md-subheader class="header md-whiteframe-6dp" layout-align="start center" layout="row" layout flex style="z-index: 21!important; border-bottom: 1px solid #e0e0e0; height: 60px;" ng-class="{'header-ms-explorer': browser == 'ie'}">
+		<md-subheader class="header md-whiteframe-6dp" layout-align="start center" layout="row" layout flex style="z-index: 21!important; border-bottom: 1px solid #e0e0e0;" ng-class="{'header-ms-explorer': browser == 'ie'}">
 			<div ng-include src="'application/partials/header.html'"></div>
 		</md-subheader>
 		<!-- header -->
@@ -56,7 +56,7 @@
 							</form>
 				    	</div>
 					</md-card>
-					<div style="width: 304px; margin: 36px auto 36px auto;" vc-recaptcha key="'6LcI7HQUAAAAAJNcej9U0cgepLlhFjwBPLO3fZpL'" ng-model="sign_up.recaptcha"></div>
+					<div style="width: 304px; margin: 36px auto 36px auto;" vc-recaptcha key="'6LdzITUUAAAAAJc60kmGZt8DBnyf-xbdPkv8JDff'" ng-model="sign_up.recaptcha"></div>
 				</div>
 			</div>
 			<!-- =Page Title -->
