--- a/lib/client/app/application/pages/authentication/partials/login.html
+++ b/lib/client/app/application/pages/authentication/partials/login.html
@@ -18,7 +18,7 @@
 
 			<div layout="row" layout-align="center center" layout-wrap flex="100" style="position: relative; top: 0; overflow: hidden; background-color: {{base_hue_darkest.value}}; min-height: {{window_height}}px!important;">
 				<div style="position: absolute; top: 0; left: 0; width: {{scroll_bar_aware_window_width}}px;">
-				    <img style="opacity: .1; min-width: 100%; min-height: 100%; width: auto; height: auto;" ng-src="https://storage.googleapis.com/spsd-189118.appspot.com/landscapeConstruction2-landscape.jpg">
+				    <img style="opacity: .1; min-width: 100%; min-height: 100%; width: auto; height: auto;" ng-src="https://storage.googleapis.com/mma-texas.appspot.com/media/images/_IMH8566.jpg">
 				</div>
 				<div style="z-index: 1;" flex="100" flex-sm="40" flex-gt-sm="25" layout="row" layout-align="start center" layout-wrap>
 
